Fixed some minor layout issues.

--- a/resources/css/pokecal.css
+++ b/resources/css/pokecal.css
@@ -7,23 +7,20 @@ body {
 	font-family: 'Raleway', sans-serif !important;
 }
 
-h1 {
+h4 {
 	font-family: 'Rubik', sans-serif !important;
 	margin-bottom: 0px !important;
 }
 
-h4 {
-	margin-bottom: 0px !important;
-}
-
 h6 {
-	margin-top: 8px !important;
-}
-
-h2,h3,h4,h5,h6 {
 	font-family: 'Montserrat', sans-serif !important;
+	margin-top: 8px !important;
 }
 
 .map {
 	height: 200px;
+}
+
+span.select2 {
+	width: 100% !important;
 }
